--- a/modals/mobileweb.html
+++ b/modals/mobileweb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<title>Super Simple lightbox Window</title>
+		<title>modal thing mobileweb</title>
 		<style>
 		body {
 			margin:0; 
