--- a/modals/mobileweb.html
+++ b/modals/mobileweb.html
@@ -8,11 +8,14 @@
 			padding:0; 
 			background:#efefef;
 			background-image: url(BF-bg2.png);
+			background-position: center;
 			background-repeat: repeat-y;
+			text-align:center; /* center div in IE */
+			for ie div centering, reset in wrapper  */
 		}
 		#wrapper {
 			width:300px; 
-			margin:0; 
+			margin:0 auto; 
 			border-radius:0 0 5px 5px;
 			-moz-border-radius:0 0 5px 5px;
 			-webkit-border-radius: 0 0 5px 5px;
@@ -151,4 +154,5 @@ jQuery(document).ready(function($) {
 </script>
 </body>
 </html>
+
 
