--- a/modals/mobileweb.html
+++ b/modals/mobileweb.html
@@ -63,7 +63,9 @@
 #modal1 {
 	width: 280px;
 	border: 1px solid #ccc;
-	border-radius: 6px;
+	border-radius: 5px;
+			-moz-border-radius:5px;
+			-webkit-border-radius:5px;
 	margin: 50px auto 0 auto;
 	background-color: #fff;
 	padding: 20px;
