--- a/modals/web.html
+++ b/modals/web.html
@@ -61,7 +61,9 @@
 #modal1 {
 	width: 386px;
 	border: 1px solid #ccc;
-	border-radius: 6px;
+	border-radius: 5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
 	margin: 50px auto 0 auto;
 	background-color: #fff;
 	padding: 50px;
