--- a/modals/web.html
+++ b/modals/web.html
@@ -33,7 +33,7 @@
 			width:100%; 
 			height:100%; 
 			background-color: #000;
-			background:rgba(0,0,0,0.7);
+			background:rgba(0,0,0,0.6);
 		}
 		#lightbox h1 {
 			text-align:left; 
@@ -68,6 +68,10 @@
 	background-color: #fff;
 	padding: 50px;
 	position: relative;
+-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+
 }
 
 #close {
