--- a/modals/mobileweb.html
+++ b/modals/mobileweb.html
@@ -34,25 +34,27 @@
 			left:0; 
 			width:100%; 
 			height:100%; 
-			background-color: #000;
-			background:rgba(0,0,0,0.7);
+			background-color: #040B16;
+			background:rgba(0,0,0,0.75);
 		}
 		#lightbox h1 {
-			text-align:left; 
+			text-align:center; 
 			color:#000;
 			font-size:24px; 
 			font-weight: normal;
-			font-family: sans-serif;
+			font-family: Helvetica, sans-serif;
 			margin: 0 0 0 0;
+			margin-left: auto;
+			margin-right: auto;
 			padding: 0 0 0 0;
 		}
 		#lightbox p {
 			text-align:left; 
 			color:#000; 
-			font-size:17px;
-			line-height: 23px; 
+			font-size:14px;
+			line-height: 20px; 
 			font-weight: normal;
-			font-family: sans-serif;
+			font-family: Helvetica, sans-serif;
 		}
 		#lightbox img {
 			box-shadow:0 0 25px #111;
@@ -61,14 +63,14 @@
 			max-width:375px;
 		}
 #modal1 {
-	width: 280px;
+	width: 260px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
 			-moz-border-radius:5px;
 			-webkit-border-radius:5px;
 	margin: 50px auto 0 auto;
 	background-color: #fff;
-	padding: 20px;
+	padding: 30px;
 	position: relative;
 }
 
@@ -76,13 +78,13 @@
 position:absolute;
 width: 12px;
 height: 12px;
-top:18px;
-right:18px;
+top:10px;
+right:10px;
 }
 #button {
 background-color: #0077ee;
 height: 50px;
-margin-top:40px;
+margin-top:20px;
 }
 		</style>
 	</head>
@@ -133,8 +135,8 @@ jQuery(document).ready(function($) {
 			'<div id="lightbox">' +
 			'<div id="modal1">' +
 			'<div id="close"><a href="#"><svg viewBox="-88 92 18 18" enable-background="new -88 92 18 18"><path d="M-79 103.9l-6.1 6.1h-2.9v-2.9l6.1-6.1-6.1-6.1v-2.9h2.9l6.1 6.1 6.1-6.1h2.9v2.9l-6.1 6.1 6.1 6.1v2.9h-2.9l-6.1-6.1"/ fill="#ccc"></svg></a></div>' +
-			'<h1>hello modal</h1>' +
-			'<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>' +
+			'<h1>Trouble Signing In?</h1>' +
+			'<p>Enter the email address for your account and we\'ll send you your username and a link email address for your.</p>' +
 			'<a href="#"><div id="button"></div></a>' +
 			'</div>' +
 			'</div>';
